--- a/package.json
+++ b/package.json
@@ -15,10 +15,19 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "cross-fetch": "^3.1.5",
     "gatsby": "^4.10.0",
-    "gatsby-plugin-theme-ui": "^0.13.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "theme-ui": "^0.13.1"
+    "react-collapse-simple": "^1.0.0",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
+    "@emotion/styled": "^11.8.1",
+    "@mdx-js/react": "^2.1.0",
+    "autoprefixer": "^10.4.7",
+    "gatsby-plugin-postcss": "^5.13.0",
+    "postcss": "^8.4.13",
+    "tailwindcss": "^3.0.24"
   }
 }
